--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 *.iml
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-.idea/caches/build_file_checksums.ser
-.idea/codeStyles/Project.xml
-.idea/gradle.xml
-.idea/misc.xml
-.idea/runConfigurations.xml
