video/audio on arrival, redirect to placeinfo, placeinfo map, new stop preview UI, rework drawing tour routes and markers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".PlaceInfo.PlaceInfoActivity">
+        <activity android:name=".PlaceInfo.PlaceInfoActivity"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
